Einleitung rausgeworfen, brauche ich nicht.

--- a/documentation/vorlage.tex
+++ b/documentation/vorlage.tex
@@ -108,7 +108,7 @@
 \mainmatter                        		% Hauptteil (ab hier arab. Seitenzahlen)
 %--------------------------------------------------------------------------
 % Die Kapitel werden in separaten .tex-Dateien abgelegt und hier eingebunden.
-\input{chapters/Einleitung}
+%%\input{chapters/Einleitung}
 \input{chapters/Konzeption}
 \input{chapters/Implementierung}
 
