Einleitende Hinweise hinzugefügt.

--- a/documentation/vorlage.tex
+++ b/documentation/vorlage.tex
@@ -108,7 +108,9 @@
 \mainmatter                        		% Hauptteil (ab hier arab. Seitenzahlen)
 %--------------------------------------------------------------------------
 % Die Kapitel werden in separaten .tex-Dateien abgelegt und hier eingebunden.
-%%\input{chapters/Einleitung}
+\newcommand{\code}[1]{\texttt{#1}}
+
+\input{chapters/Einleitung}
 \input{chapters/Konzeption}
 \input{chapters/Implementierung}
 
