--- a/documentation/vorlage.tex
+++ b/documentation/vorlage.tex
@@ -72,20 +72,20 @@
 %--------------------------------------------------------------------------
 \begin{document}
 %------------------------- Titelblatt -------------------------------------
-\title{Entwurf einer Command Queue für Echtzeit-Strategiespiele}
-\subtitle{Creating a command queue for real time strategy games}
+\title{Generierung eines dreidimensionalen Baumes mit OpenGL}
+%\subtitle{Creating a command queue for real time strategy games}
 %---- Die Art der Dokumentation kann hier ausgewählt werden---------------
 %\project{Bachelor-Projektarbeit}
 %\project{Bachelor-Abschlussarbeit}
 %\project{Master-Projektstudium}
 %\project{Master-Abschlussarbeit}
 %\project{Seminar zur Vorlesung ...}
-\project{Hausarbeit zur Vorlesung Künstliche Intelligenz für Spiele}
+\project{Hausarbeit zur Vorlesung Real-Time Rendering}
 %--------------------------------------------------------------------------
 \supervisor{Prof. Dr. Christof Rezk-Salama} 		% Betreuer der Arbeit
 \author{Daniel Biskup, 952976} 							% Autor der Arbeit
 \address{Trier,} 							% Im Zusammenhang mit dem Datum wird hinter dem Ort ein Komma angegeben
-\submitdate{7.9.2014} 				% Abgabedatum
+\submitdate{31.3.2015} 				% Abgabedatum
 %\begingroup
 %  \renewcommand{\thepage}{title}
 %  \mytitlepage
